Fix creazione viaggi
